--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title> Web Page </title>
-    </head>
+<head>
+    <title>Week2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+    #sticky {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        padding: 5px;
+        background-color: #cae8ca;
+        border: 2px solid #4CAF50;
+        }
+    </style>
+</head>
 <body>
-    <p>Welcome to Web page </p>
+<div style="height:100px;width:200px"></div>
+    <nav id="sticky" class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">21r01a05p5.com</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown"
+                         href="#">Page 1 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://www.google.com" target="_blank">Page 1-1</a></li>
+                            <li><a href="#">Page 1-2</a></li>
+                            <li><a href="#">Page 1-3</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdwon"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 2 <span class ="caret"></span></a></li>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Page 2-1</a></li>
+                        <li><a href="#">Page 2-2</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="#">Page 3</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <h3>Basic Nvbar Example</h3>
+        <p>A navigation bar is the navigation header that is placed at the top of the page.</p>
+    </div>
+    <div style="padding-bottom:8000px">
+        <p>Scroll back up to remove the stickyness.</p>
+    </div>
 </body>
 </html>
